--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,1 +1,10 @@
-<footer>Page footer</footer>
+<footer>
+  <div id="copyright">&copy; Rahul. <span>All Rights Reserved &emsp; 2022</span></div>
+
+  <div class="links">
+    <ul>
+      <a href="/">Home</a>
+      <a href="/users/profile">Profile</a>
+    </ul>
+  </div>
+</footer>
