--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %></title>
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="css/sign-up.css" />
     <%- style %>
-    <link rel="stylesheet" href="css/layout.css">
   </head>
   <body>
     <%- include('_header'); -%>
 
-    <%- body %>
+    <main id="layout-main"><%- body %></main>
 
-    <%- include('_footer'); -%>
-
-
-    <%- script %>
+    <%- include('_footer'); -%> <%- script %>
   </body>
 </html>
