--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -2,17 +2,13 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 body {
   font-family: "Anek Latin", sans-serif;
-  height: 75vh;
-}
-body h1 {
-  padding: 2rem 2rem;
-  font-size: 4rem;
-}
-body #layout-main {
-  height: 100%;
-}
+  height: 75vh; }
+  body h1 {
+    padding: 2rem 2rem;
+    font-size: 4rem; }
+  body #layout-main {
+    height: 100%; }
