--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,5 +1,7 @@
 <footer>
-  <div id="copyright">&copy; Rahul. <span>All Rights Reserved &emsp; 2022</span></div>
+  <div id="copyright">
+    &copy; Rahul. <span>All Rights Reserved &emsp;<small>2022</small></span>
+  </div>
 
   <div class="links">
     <ul>
