--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,13 +1,12 @@
 footer {
   position: fixed;
   bottom: 0;
-  width: 100vw;
-  background: #166FE5;
-  height: 4rem;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 4rem; }
+  padding: 5px 10px;
+  background: #166FE5; }
   footer #copyright {
     color: #fff;
     font-size: 1.3rem; }
