added comments on post functionality

--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -1,7 +1,5 @@
 footer{
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+    width: inherit;
     display: flex;
     justify-content: space-between;
     align-items: center;
