--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -4,7 +4,10 @@ footer {
   justify-content: space-between;
   align-items: center;
   padding: 5px 10px;
-  background: #166FE5; }
+  background: #166FE5;
+  position: fixed;
+  width: 100%;
+  bottom: 0; }
   footer #copyright {
     color: #fff;
     font-size: 1.3rem; }
