--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -5,6 +5,9 @@ footer{
     align-items: center;
     padding: 5px 10px;
     background: #166FE5;
+    position: fixed;
+    width: 100%;
+    bottom: 0   ;
 
     #copyright{
         color: #fff;
