--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,13 @@
 
   <% if (locals.user) {%>
   <form action="/posts/create" id="new-post-form" method="POST">
-    <textarea name="content" cols="30" rows="3" placeholder="Type Here..." required>
+    <textarea
+      name="content"
+      cols="30"
+      rows="3"
+      placeholder="Type Here..."
+      required
+    >
     </textarea>
     <input type="submit" value="Post" />
   </form>
@@ -17,41 +23,55 @@
 
       <li>
         <p>
-          <%= post.content%>
+          <% if(locals.user && locals.user.id == post.user.id){%>
+          <small>
+            <a href="/posts/destroy/<%= post.id %>">delete</a>
+          </small>
+          <%} %> <%= post.content%>
           <br />
           <small> <%= post.user.name %> </small>
         </p>
 
-        <div class="post-comments"><% if (locals.user) {%>
-          
-          <form action="/comments/create" method="POST">
-              <input type="text" name="content" placeholder="Type here to add comment..." required>
-              <input type="hidden" name="post" value="<%= post.id %>">
-              <input type="submit" value="Add Comment">
+        <div class="post-comments">
+          <% if (locals.user) {%>
 
+          <form action="/comments/create" method="POST">
+            <input
+              type="text"
+              name="content"
+              placeholder="Type here to add comment..."
+              required
+            />
+            <input type="hidden" name="post" value="<%= post._id %>" />
+            <input type="submit" value="Add Comment" />
           </form>
-          
+
           <%}%>
-          
+
           <div class="post-comments-list">
             <ul id="post-comments-<%= post._id %>">
               <% for(comment of post.comments) {%>
-                
-                <p>
-                  <%= comment.content %>
-                  <br>
-                  <small>
-                    <%= comment.user.name %>
-                  </small>
-                </p>
-                
+
+              <p>
+
+                <% if(locals.user && locals.user.id == comment.user.id){%>
+                <small>
+                  <a href="/comments/destroy/<%= comment.id %>">delete</a>
+                </small>
                 <%} %>
-              </ul>
-            </div>
+                
+                <%= comment.content %>
+                <br />
+                <small> <%= comment.user.name %> </small>
+
+              </p>
+
+              <%} %>
+            </ul>
           </div>
-        </li>
-        
-        
+        </div>
+      </li>
+
       <%} %>
     </ul>
   </div>
