--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -5,8 +5,8 @@ footer{
     align-items: center;
     padding: 5px 10px;
     background: #166FE5;
-    position: fixed;
-    width: 100%;
+    // position: fixed;
+    // width: 100%;
     bottom: 0   ;
 
     #copyright{
