--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,41 +1,40 @@
-<h1>Codial / <%= title %></h1>
+<link rel="stylesheet" href="css/home.css" />
 
-<section id="feed-posts">
-  <h4>Posts</h4>
+<!-- <h1>Codial / <%= title %></h1> -->
 
-  <% if (locals.user) {%>
-  <form action="/posts/create" id="new-post-form" method="POST">
-    <textarea
-      name="content"
-      cols="30"
-      rows="3"
-      placeholder="Type Here..."
-      required
-    >
-    </textarea>
-    <input type="submit" value="Post" />
-  </form>
-  <% } %>
+<div id="home-container">
+  <section id="feed-posts">
+    <h4>Posts</h4>
 
-  <div id="posts-list-container">
-    <ul>
-      <% for(post of posts){%>
+    <% if (locals.user) {%>
+    <form action="/posts/create" id="new-post-form" method="POST">
+      <textarea
+        name="content"
+        cols="30"
+        rows="3"
+        placeholder="Type Here..."
+        required
+      >
+      </textarea>
+      <input type="submit" value="Post" />
+    </form>
+    <% } %>
 
-      <%- include('_post') -%>
+    <div id="posts-list-container">
+      <ul>
+        <% for(post of posts){%> 
+          <%- include('_post') -%> 
+          <%} %>
+      </ul>
+    </div>
+  </section>
 
-      <%} %>
-    </ul>
-  </div>
-</section>
-
-
-<section id="user-friends">
-  <h4>Friends</h4>
-  <% for (u of all_users){%>
+  <section id="user-friends">
+    <h4>Friends</h4>
+    <% for (u of all_users){%>
     <p>
-      <a href="/users/profile/<%= u.id %>">
-          <%= u.name %>
-      </a>
+      <a href="/users/profile/<%= u.id %>"> <%= u.name %> </a>
     </p>
-  <% } %>
-</section>
+    <% } %>
+  </section>
+</div>
